Implement security and configuration improvements
- Externalize RSA keys to environment variables (RSA_PRIVATE_KEY, RSA_PUBLIC_KEY)
- Make CORS origins configurable via ALLOWED_CORS_ORIGINS
- Make email domains configurable via ALLOWED_EMAIL_DOMAINS
- Enable Flyway migrations by default (configurable via FLYWAY_ENABLED)
- Add proper project metadata to pom.xml (license, developers, SCM)
- Create AppSecurityProperties configuration class
- Update SecurityConfiguration and UserService to use new properties
- Add SECURITY_CONFIGURATION.md and UPGRADE_GUIDE.md documentation

Co-authored-by: candogusyilmaz <33032619+candogusyilmaz@users.noreply.github.com>